Fixed comment button alignment issue

--- a/style.css
+++ b/style.css
@@ -1508,6 +1508,11 @@ blockquote p {
 	color: #666;
 }
 
+.comments-form .form-submit {
+	width: 100%;
+    text-align: center;
+}
+
 /* reply */
 .comments-list {
 	list-style: none;
